--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,6 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  imageName: 'adamhancock/ghost-azure-storage'
-
 stages:
 - stage: Build
   displayName: Build image
@@ -22,10 +20,11 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        repository: $(imageName)
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'Docker'
+        repository: 'adamhancock/ghost-azure-storage'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
         tags: |
-          $(tag)
+          $(Build.BuildId)
+          latest
